--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,10 @@
 
 # Language of your content in 2-letter code, e.g.: en, de.
 # You may also provide a location, e.g.: en-us, de_AT.
-lang:                  en
+lang:                  kr
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Starter Kit
+title:                 Cycrypto's Blog
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
@@ -29,7 +29,7 @@ description:           >
   with a focus on personal sites that are meant to impress.
 
 # A shorter description for the sidebar.
-tagline:               Change `tagline` in `_config.yml`
+tagline:               \#Programming \#Hacking \#Computer Science \#etc...
 
 # A list of keywords for your blog
 keywords:              []
@@ -42,18 +42,20 @@ logo:                  /assets/img/logo.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                <firstname> <lastname>
-  email:               <mail@domain.tld>
+  name:                Park JunHa
+  email:               <jh01love@naver.com>
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
 # Add links to the sidebar.
 menu:
-  - title:             Example
+  - title:             Algorithm
     url:               /example/
-  - title:             Documentation
+
+  - title:             ComputerSciene
     url:               /docs/
-  - title:             About
+  
+  - title:             Project / Memories
     url:               /about/
 
 # Add links to the footer.
@@ -359,11 +361,10 @@ plugins:
 #   admins:              <id>
 
 # Used on index and about sites
-# social:
-#   name:                <firstname> <lastname>
-#   links:
-#     - https://twitter.com/<username>
-#     - https://github.com/<username>
+social:
+  name: Park JunHa
+  links:
+    - https://github.com/Cycrypto
 
 
 # Plugin Configs
