--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,33 +2,37 @@
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
 author1:
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+  name:              Park JunHa
+  email:             jh01love@naver.com
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    
-    Open `_data/authors.yml` to edit this text.
+    Im majoring in Computer Science in Korea Polytechnic University.
+    My Stack is..
+    - C / C++
+    - Python
+    - MySql
+    - Html / Css / Js / Php
+    - Java
+    Recently, the project I'm working on...
+    - Chatbot Serviced in KakaoTalk which is Korea messenger platform
 
   # This photo will be used in the about section
-  picture:
-    path:            https://placehold.it/128x128
-    # srcset is optional, but can be used to provide higher res versions for retina displays
-    srcset:
-      1x:            https://placehold.it/128x128
-      2x:            https://placehold.it/256x256
+  # picture:
+  #   path:            https://placehold.it/128x128
+  #   # srcset is optional, but can be used to provide higher res versions for retina displays
+  #   srcset:
+  #     1x:            https://placehold.it/128x128
+  #     2x:            https://placehold.it/256x256
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         <username>
-    github:          <username>
-    # email:           <mail@domain.tld>
+    # twitter:         <username>
+    github:          Cycrypto
+    email:           <jh01love@naver.com>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
@@ -39,7 +43,7 @@ author1:
     # spotify:         <user>/<number>
     # soundcloud:      <username>
     # lastfm:          <username>
-    # instagram:       <username>
+    instagram:       _p_junna
     # flickr:          <string@string>
     # 500px:           <username>
     # dribbble:        <username>
@@ -68,15 +72,20 @@ author1:
 
 # Another author (optional)
 author2:
-  name:              <firtname> <lastname>
-  email:             <mail@domain.tld>
+  name:              Park JunHa
+  email:             <jh01love@naver.com>
   about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-    Open `_data/authors.yml` to edit this text.
+    Im majoring in Computer Science in Korea Polytechnic University.
+    My Stack is..
+    - C / C++
+    - Python
+    - MySql
+    - Html / Css / Js / Php
+    - Java
+    Recently, the project I'm working on...
+    - Chatbot Serviced in KakaoTalk which is Korea messenger platform
 
   picture:           https://placehold.it/128x128
-  twitter:           <username>
-  github:            <username>
+  github:            Cycrypto
+  instagram:         _p_junna
+  email:             jh01love@naver.com
