--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ author:
 # Add links to the sidebar.
 menu:
   - title:             Algorithm
-    url:               /example/
+    url:               /test/
 
   - title:             ComputerSciene
     url:               /docs/
