--- a/_config.yml
+++ b/_config.yml
@@ -50,23 +50,23 @@ author:
 # Add links to the sidebar.
 menu:
   - title:             Algorithm
-    url:               /test/
+    url:               /algo/
 
   - title:             ComputerSciene
-    url:               /docs/
+    url:               /cs/
   
   - title:             Project / Memories
-    url:               /about/
+    url:               /pj/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
 legal:
-  - title:             LICENSE
-    url:               /LICENSE/
-  - title:             NOTICE
-    url:               /NOTICE/
-  - title:             CHANGELOG
-    url:               /CHANGELOG/
+  - title:             Algorithm
+    url:               /algo/
+  - title:             ComputerSciene
+    url:               /cs/
+  - title:             Project / Memories
+    url:               /pj/
 
 # This text will appear in a `<small>` tag in the footer of every page.
 copyright:             © 2021. All rights reserved.
