--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,10 @@ menu:
   - title:             Posts
     url:               /posts/
 
+  - title:             Boj
+    url:               /boj/
+
+
 
 
 # Add links to the footer.
